# finchers

./: .appveyor.yml  .clog.toml  .gitignore  .gitmodules  .rustfmt.toml  .textlintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Rakefile  aliases.js  build.rs  index.html  release.toml  rustfmt.toml  search-index.js  source-files.js
doc/: .textlintrc  Cargo.toml  Gemfile  _config.yml  build.rs  generate.sh  index.md
doc/guide/src/: SUMMARY.md  quickstart.md
doc/site/: .gitignore  _config.yml
examples/custom-logging/: Cargo.toml
examples/custom-logging/src/: main.rs
examples/diesel/: Cargo.toml
examples/diesel/src/: api.rs  database.rs  main.rs  model.rs
examples/form/: Cargo.toml
examples/form/src/: main.rs
examples/json-api/: Cargo.toml
examples/json-api/src/: main.rs
examples/juniper/: Cargo.toml
examples/juniper/src/: main.rs  schema.rs
examples/jwt-auth/: .gitignore  Cargo.toml
examples/jwt-auth/src/: main.rs
examples/logging/: Cargo.toml
examples/logging/src/: main.rs
examples/middlewares/: Cargo.toml
examples/petstore/: Cargo.toml
examples/session-redis/: Cargo.toml
examples/staticfiles/: Cargo.toml
examples/template-askama/: Cargo.toml
examples/template-handlebars/: Cargo.toml
finchers/: Cargo.toml  all.html  index.html  macro.path.html  release.toml  sidebar-items.js
finchers-core/: Cargo.toml
finchers-core/src/: apply.rs  caller.rs  either.rs  endpoint.rs  endpoints.rs  error.rs  errors.rs  future.rs  generic.rs  input.rs  json.rs  lib.rs  local.rs  macros.rs  never.rs  option.rs  outcome.rs  output.rs  poll.rs  result.rs  service.rs  string.rs  task.rs  test.rs  util.rs
finchers-cors/: Cargo.toml  README.md
finchers-cors/src/: lib.rs
finchers-cors/tests/: integration_test.rs  test_cors.rs
finchers-derive/: Cargo.toml
finchers-derive/src/: from_segment.rs  http_response.rs  http_status.rs  lib.rs
finchers-derive/tests/: from_segment.rs  http_status.rs  smokes.rs
finchers-endpoint/: Cargo.toml
finchers-endpoint/src/: abort.rs  abort_with.rs  all.rs  and.rs  and_then.rs  apply.rs  body.rs  callable.rs  chain.rs  context.rs  endpoint.rs  error.rs  ext.rs  header.rs  inspect.rs  join.rs  join_all.rs  just.rs  lazy.rs  left.rs  lib.rs  map.rs  map_async.rs  maybe_done.rs  method.rs  ok.rs  or.rs  path.rs  right.rs  skip.rs  skip_all.rs  then.rs  try_abort.rs  try_abort_with.rs  with.rs
finchers-endpoint/tests/: abort.rs  all.rs  and.rs  and_then.rs  as_ok.rs  inspect.rs  just.rs  lazy.rs  map.rs  map_async.rs  ok.rs  or.rs  path.rs  then.rs  try_abort.rs
finchers-ext/: Cargo.toml
finchers-ext/src/: abort.rs  all.rs  and.rs  common.rs  inspect.rs  just.rs  lazy.rs  left.rs  lib.rs  lift.rs  map.rs  map_async.rs  maybe_done.rs  or.rs  right.rs
finchers-ext/tests/: abort.rs  all.rs  and.rs  as_ok.rs  inspect.rs  just.rs  lazy.rs  map.rs  map_async.rs  or.rs
finchers-headers/: Cargo.toml  README.md
finchers-headers/src/: lib.rs
finchers-http/: Cargo.toml
finchers-http/src/: body.rs  header.rs  json.rs  lib.rs  method.rs  path.rs  query.rs
finchers-http/tests/: body.rs  path.rs
finchers-json/: Cargo.toml
finchers-json/src/: lib.rs
finchers-juniper/: .travis.yml  Cargo.toml  README.md  changelog.md  release.toml
finchers-juniper/examples/: executors.rs  todos.rs
finchers-juniper/src/: graphiql.rs  lib.rs  request.rs
finchers-juniper/tests/: integration_test.rs
finchers-runtime/: Cargo.toml
finchers-runtime/src/: app.rs  apply.rs  config.rs  endpoint.rs  lib.rs  local.rs  logging.rs  server.rs  service.rs  test.rs
finchers-session/: .travis.yml  Cargo.toml  README.md  release.toml
finchers-session/examples/: simple.rs
finchers-session/src/: cookie.rs  in_memory.rs  lib.rs  redis.rs  session.rs  tests.rs  util.rs
finchers-template/: .travis.yml  Cargo.toml  README.md  Rakefile  build.rs  release.toml
finchers-template/changelog/: v0.1.x.md
finchers-template/src/: lib.rs  renderer.rs
finchers-test/: Cargo.toml
finchers-test/src/: lib.rs
finchers-tungstenite/: .travis.yml  Cargo.toml  README.md  release.toml
finchers-tungstenite/examples/: server.rs
finchers-tungstenite/src/: handshake.rs  lib.rs
finchers-tungstenite/tests/: integration.rs  test_tungstenite.rs
finchers/action/: EndpointAction.t.html  OneshotAction.t.html  Preflight.t.html  PreflightContext.t.html  enum.Preflight.html  index.html  sidebar-items.js  struct.ActionContext.html  struct.Cursor.html  struct.Oneshot.html  struct.PreflightContext.html  trait.EndpointAction.html  trait.OneshotAction.html
finchers/endpoint/: IsEndpoint.t.html  LocalEndpointObj.t.html  fn.endpoint.html  fn.unit.html  fn.value.html  index.html  sidebar-items.js  struct.EndpointObj.html  struct.LocalEndpointObj.html  trait.Endpoint.html  trait.IsEndpoint.html  unit.v.html
finchers/endpoints/: index.html  sidebar-items.js
finchers/error/: fail.v.html  fn.bad_request.html  fn.err_msg.html  fn.fail.html  fn.forbidden.html  fn.internal_server_error.html  fn.method_not_allowed.html  fn.not_found.html  fn.unauthorized.html  index.html  sidebar-items.js  struct.Error.html  trait.HttpError.html  type.Result.html
finchers/output/: index.html  sidebar-items.js  struct.Debug.html  struct.Json.html  struct.Redirect.html  trait.IntoResponse.html
finchers/prelude/: index.html
finchers/service/: EndpointServiceExt.t.html  ResponseBody.t.html  index.html  sidebar-items.js  struct.App.html  struct.Context.html  trait.EndpointServiceExt.html  type.ResponseBody.html
finchers/src/: action.rs  app.rs  body.rs  endpoint.rs  endpoints.rs  error.rs  errors.rs  future.rs  input.rs  lib.rs  output.rs  responder.rs  rt.rs  server.rs  service.rs  test.rs  util.rs
finchers/test/: IntoReqBody.t.html  ReqBody.t.html  TestRequest.t.html  TestRunner.t.html  fn.runner.html  index.html  runner.v.html  sidebar-items.js  struct.ReqBody.html  struct.TestRunner.html  trait.IntoReqBody.html  trait.TestRequest.html
finchers/tests/: test_import_macros.rs  tests.rs
finchers/util/: enum.Never.html  index.html  sidebar-items.js
(+1019 files in other folders)
