[package]
name = "finchers-workspace"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.doubter]
version = "0.1"
default-features = false

[dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[dev-dependencies]
finchers = { path = "finchers" }
izanami = "0.1.0-preview.1"
izanami-service = "0.1.0-preview.1"

[workspace]
members = [
  "finchers",
  "finchers/macros",

  #"finchers-cors",
  #"finchers-headers",
  #"finchers-juniper",
  #"finchers-session",
  #"finchers-template",
  #"finchers-tungstenite",

  #"examples/custom-logging",
  #"examples/diesel",
  #"examples/juniper",
  #"examples/jwt-auth",
  #"examples/middlewares",
  #"examples/session-redis",
  #"examples/staticfiles",
  #"examples/template-askama",
  #"examples/template-handlebars",
  #"examples/template-horrorshow",
  #"examples/template-tera",
  #"examples/websocket",
]

[patch.crates-io]
finchers = { version = "0.14.0-dev", path = "finchers" }
finchers-macros = { version = "0.14.0-dev", path = "finchers/macros" }

#finchers-headers = { version = "0.1.0", path = "finchers-headers" }
#finchers-juniper = { version = "0.2.1", path = "finchers-juniper" }
#finchers-session = { version = "0.2.1-dev", path = "finchers-session" }
#finchers-template = { version = "0.2.0-dev", path = "finchers-template" }
#finchers-tungstenite = { version = "0.2.1-dev", path = "finchers-tungstenite" }

izanami = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-http = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-service = { git = "https://github.com/ubnt-intrepid/izanami.git" }
