[package]
name = "finchers-workspace"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.doubter]
version = "0.1"
default-features = false

[dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[dev-dependencies]
finchers = { path = "finchers" }
izanami = "0.1.0-preview.1"
izanami-service = "0.1.0-preview.1"

[workspace]
members = [
  "finchers",
  "finchers/macros",

  #"finchers-cors",
  #"finchers-headers",
  #"finchers-juniper",
  #"finchers-session",
  #"finchers-template",
  "finchers-tungstenite",

  #"examples/custom-logging",
  #"examples/diesel",
  #"examples/juniper",
  #"examples/jwt-auth",
  #"examples/middlewares",
  #"examples/session-redis",
  #"examples/staticfiles",
  #"examples/template-askama",
  #"examples/template-handlebars",
  #"examples/template-horrorshow",
  #"examples/template-tera",
  #"examples/websocket",
]

[patch.crates-io]
finchers = { path = "finchers" }
finchers-macros = { path = "finchers/macros" }

#finchers-headers = { path = "finchers-headers" }
#finchers-juniper = { path = "finchers-juniper" }
#finchers-session = { path = "finchers-session" }
#finchers-template = { path = "finchers-template" }
finchers-tungstenite = { path = "finchers-tungstenite" }

izanami = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-http = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-rt = { git = "https://github.com/ubnt-intrepid/izanami.git" }
izanami-service = { git = "https://github.com/ubnt-intrepid/izanami.git" }

version-sync = { git = "https://github.com/ubnt-intrepid/version-sync.git", branch = "bump-version" }
