cargo-features = ["edition"]

[package]
name = "finchers-core"
version = "0.12.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-core"
description = """
Core primitives for constructing asynchronous HTTP services
"""

[dependencies]
mime = "0.3"
http = "0.1"
futures = "0.1"
bytes = "0.4"
failure = "0.1.2"
percent-encoding = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.4"
serde_json = "1.0"
hyper = "0.12.7"
