[package]
name = "finchers-core"
version = "0.12.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-core"
description = """
Core primitives for constructing asynchronous HTTP services
"""

[dependencies]
mime = "0.3.8"
http = "0.1.10"
futures = "0.1.23"
bytes = "0.4.9"
failure = "0.1.2"
percent-encoding = "1.0.1"
serde = { version = "1.0.71", features = ["derive"] }
serde_qs = "0.4.1"
serde_json = "1.0.24"
hyper = "0.12.7"

pin-utils = "0.1.0-alpha.1"
futures-core-preview = { git = "https://github.com/rust-lang-nursery/futures-rs.git", branch = "master" }
futures-executor-preview = { git = "https://github.com/rust-lang-nursery/futures-rs.git", branch = "master" }
futures-util-preview = { git = "https://github.com/rust-lang-nursery/futures-rs.git", branch = "master", features = ["tokio-compat"] }
#futures-core-preview = "0.3.0-alpha.3"
#futures-executor-preview = "0.3.0-alpha.3"
#futures-util-preview = { version = "0.3.0-alpha.3", features = ["tokio-compat"] }
