[package]
name = "finchers-cors"
version = "0.1.0-alpha.1-dev"
description = """
A set of components for supporting CORS in Finchers.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT or Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
readme = "README.md"
publish = false

[features]
strict = []

[dependencies]
failure = "0.1.2"
finchers = { version = "0.12.0-alpha.5", path = ".." }
futures-preview = "0.3.0-alpha.6"
http = "0.1"
either = "1.5.0"
