[package]
name = "finchers-cors"
version = "0.1.0-alpha.1"
description = """
CORS support for Finchers.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/finchers-rs/finchers-cors.git"
readme = "README.md"
publish = false

[features]
strict = []

[dependencies]
either = "1.5.0"
failure = "0.1.2"
finchers = "0.12.0-alpha.6"
futures = "0.1.24"
http = "0.1"

[dev-dependencies]
matches = "0.1.8"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
