[package]
name = "finchers-cors"
version = "0.1.0-dev"
edition = "2018"
description = """
CORS support for Finchers.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
readme = "README.md"
publish = false

[dependencies]
either = "1.5.0"
failure = "0.1.2"
finchers = { version = "0.14.0-dev", path = "../" }
futures = "0.1.24"
http = "0.1"
izanami-util = "0.1.0-preview.1"

[dev-dependencies]
matches = "0.1.8"
version-sync = "0.7"
