[package]
name = "finchers-derive"
version = "0.11.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-derive"
description = """
Custom derive for Finchers
"""

[lib]
proc-macro = true

[dependencies]
syn = "0.13"
quote = "0.5"
proc-macro2 = "0.3"
