cargo-features = ["edition"]

[package]
name = "finchers-derive"
version = "0.12.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-derive"
description = """
Custom derive for Finchers
"""

[lib]
proc-macro = true

[dependencies]
syn = "0.14.7"
quote = "0.6.5"
proc-macro2 = "0.4.9"
