[package]
name = "finchers-endpoint"
version = "0.11.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
either = "1.5.0"
finchers-core = { version = "0.11.0", path = "../finchers-core", default-features = false }

[dev-dependencies]
finchers-http = { version = "0.11.0", path = "../finchers-http" }
finchers-test = { version = "0.11.0", path = "../finchers-test" }
