[package]
name = "finchers-http"
version = "0.11.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
finchers-core = { version = "0.11.0-dev", path = "../finchers-core" }
futures = "0.1.21"
http = "0.1.5"
mime = "0.3.0"
serde = "1.0"
serde_qs = "0.4"
serde_json = "1.0"
bytes = "0.4"

[dev-dependencies]
finchers-endpoint = { version = "0.11.0-dev", path = "../finchers-endpoint" }
finchers-test = { version = "0.11.0-dev", path = "../finchers-test" }
