[package]
name = "finchers-runtime"
version = "0.11.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
bytes = "0.4"
futures = "0.1.20"
http = "0.1.5"
tokio = "0.1.5"
structopt = "0.2.7"
slog = "2.2.3"
slog-async = "2.3.0"
slog-term = "2.4.0"

[dependencies.finchers-core]
version = "0.11.0-dev"
path = "../finchers-core"

[dependencies.hyper]
version = "0.11.24"
features = ["compat"]
default-features = false
