[package]
name = "finchers-runtime"
version = "0.12.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-runtime"
description = """
Runtime support for Finchers, which supports serving asynchronous HTTP services
"""

[dependencies]
finchers-core = { version = "0.12.0-dev", path = "../finchers-core" }

bytes = "0.4"
failure = "0.1.1"
futures = "0.1.20"
http = "0.1.5"
scoped-tls = "0.1.1"
slog = "2.2.3"
slog-async = "2.3.0"
slog-term = "2.4.0"
structopt = "0.2.7"
tokio = "0.1.5"
hyper = "0.12.7"
