[package]
name = "finchers-session"
version = "0.2.1-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Session support for Finchers.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/finchers-rs/finchers-session.git"

include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
  "benches/**/*",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[package.metadata.docs.rs]
features = [
  "secure",
  "redis",
]
rustdoc-args = [
  # FIXME: remove it as soon as the rustc version used in docs.rs is updated
  "--cfg", "finchers_inject_extern_prelude",
]

[features]
default = ["secure"]
secure = ["cookie/secure", "finchers/secure"]

[dependencies]
finchers = { version = "0.13", default-features = false }

cookie = "0.11.0"
failure = "0.1.2"
futures = "0.1.24"
http = "0.1.13"
time = "0.1.40"
uuid = { version = "0.7.1", features = ["serde", "v4"] }

redis = { version = "0.9.1", optional = true }

[dev-dependencies]
pretty_env_logger = "0.2.4"
log = "0.4.5"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.30"
