[package]
name = "finchers-test"
version = "0.11.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-test"
description = """
A testing framework for Finchers
"""

[dependencies]
finchers-core = { version = "0.11.0", path = "../finchers-core" }
futures = "0.1.21"
http = "0.1.5"
