[package]
name = "finchers-tungstenite"
version = "0.3.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
WebSocket support for Finchers, based on tungstenite.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/finchers-rs/finchers-tungstenite.git"

include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
  "benches/**/*",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[dependencies]
finchers = "0.14.0-dev"

base64 = "0.10"
failure = "0.1.3"
futures = "0.1.24"
http = "0.1.13"
log = "0.4"
sha1 = "0.6.0"
tokio-tungstenite = { version = "0.6.0", default-features = false }
tungstenite = "0.6.0"

izanami-http = "0.1.0-preview.1"
izanami-rt = "0.1.0-preview.1"

[dev-dependencies]
izanami = "0.1.0-preview.1"
log = "0.4.5"
matches = "0.1.8"
pretty_env_logger = "0.3.0"
