[package]
name = "finchers"
version = "0.14.0-dev"
edition = "2018"
description = "A combinator library for builidng asynchronous HTTP services"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://finchers-rs.github.io"
repository = "https://github.com/finchers-rs/finchers.git"
keywords = ["finchers", "web", "framework", "server"]
categories = ["web-programming::http-server"]

include = [
  "/Cargo.toml",
  "/build.rs",
  "/src/**/*",
  "/tests/**/*",
  "/examples/**/*",
  "/benches/**/*",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
  "/README.md"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "1.0.4"
bytes = { version = "0.4.9", features = ["either"] }
cookie = { version = "0.11.0", features = ["percent-encode"] }
either = "1.5.0"
failure = "0.1.2"
futures = "0.1.23"
http = "0.1.10"
log = "0.4.3"
mime = "0.3.8"
mime_guess = "2.0.0-alpha.6"
percent-encoding = "1.0.1"
serde = { version = "1.0.71", features = ["derive"] }
serde_json = "1.0.24"
serde_qs = "0.4.1"
tokio = "0.1.8"
url = "1.7.1"

izanami-http = "0.1.0-preview.1"
izanami-service = "0.1.0-preview.1"

[dependencies.finchers-macros]
version = "0.14.0-dev"

[build-dependencies]
version_check = "0.1.5"

[dev-dependencies]
matches = "0.1.8"

[features]
default = []
secure = ["cookie/secure"]
