cargo-features = ["edition"]

[package]
name = "example-custom-logging"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "custom-logging"
path = "src/main.rs"
doc = false

[dependencies]
finchers = { path = "../.." }
slog = "2.3.3"
sloggers = "0.2.8"
