cargo-features = ["edition"]

[package]
name = "example-diesel"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "diesel"
path = "src/main.rs"
doc = false

[dependencies]
finchers = { path = "../.." }

diesel = { version = "1.3.2", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
failure = "0.1.2"
serde = "1.0"
tokio = "0.1"
tokio-threadpool = "0.1"
