[package]
name = "example-json-api"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[[bin]]
name = "json-api"
path = "src/main.rs"
doc = false

[dependencies]
finchers = { path = "../.." }
finchers-http = { path = "../../finchers-http" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

