cargo-features = ["edition"]

[package]
name = "example-logging"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "logging"
path = "src/main.rs"
doc = false

[dependencies]
finchers = { path = "../.." }
log = "0.4.5"
pretty_env_logger = "0.2.4"
