[package]
name = "example-session-redis"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_session_redis"
path = "src/main.rs"
doc = false

[dependencies]
finchers = "0.13"
finchers-session = { version = "0.2", features = ["redis"] }

failure = "0.1.2"
http = "0.1.13"
log = "0.4.5"
pretty_env_logger = "0.2.4"
redis = "0.9"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.31"
